--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <div class="col-md-5 col-xs-12 pull-left">
                 <div class="reservation-form-shadow">
 
-                    <form action="#" method="post" name="car-select-form" id="car-select-form">
+                    <form name="car-select-form" id="car-select-form">
 
                         <div class="alert alert-danger hidden" id="car-select-form-msg">
                             <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
@@ -276,7 +276,7 @@
                         </div>
                         <!-- Drop-off date/time end -->
 
-                        <input type="submit" class="submit" name="submit" value="continue reservation" id="checkoutModalLabel">
+                        <input type="button" class="submit" name="submit" value="continue reservation" id="car-select-form-button">
                     </form>
 
                 </div>
