--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="css/animate.css" rel="stylesheet">
 
     <!-- Google Font Lato -->
-    <link href='http://fonts.googleapis.com/css?family=Lato:400,700,900,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lato:400,700,900,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/font-awesome.min.css">
 
     <!-- Plugin Styles -->
@@ -863,7 +863,6 @@
 <script src="js/jquery.placeholder.js"></script>
 <script src="js/locations-autocomplete.js"></script>
 <script src="js/bootstrap-datepicker.js"></script>
-<script src="http://maps.google.com/maps/api/js?sensor=false&amp;language=en"></script>
 <script src="js/gmap3.min.js"></script>
 
 
