--- a/index.html
+++ b/index.html
@@ -699,6 +699,10 @@
                         <div class="alert hidden" id="checkout-form-msg">
                             Your reservation is submitted, we will contact you shortly.
                         </div>
+                        <div class="alert alert-danger hidden" id="checkout-info-form-msg">
+                          <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+                          <strong>Note:</strong> All fields required!
+                      </div>
                         <h3>PERSONAL INFORMATION</h3>
                         <div class="form-group left">
                             <label for="first-name">First Name:</label>
