--- a/index.html
+++ b/index.html
@@ -245,12 +245,18 @@
 
                 <!-- Car select start -->
                 <div class="styled-select-car">
-                            <select name="car-select" id="car-select">
-                                <option value="">Select your caravan type</option>
-                                <option value="assets/img/OURGEN-RV_GENPOD_Front.png">GENPOD (Ella)</option>
-                                <option value="img/OURGEN-RV_GENPOD_Right-removebg-preview.png">GENPOD (Leo)</option>
-                            </select>
-                        </div>
+                  <select name="car-select" id="car-select">
+                    <option value="">Select your caravan type</option>
+                    <option value="assets/img/OURGEN-RV_GENPOD_Front.png">
+                      GENPOD (Ella)
+                    </option>
+                    <option
+                      value="img/OURGEN-RV_GENPOD_Right-removebg-preview.png"
+                    >
+                      GENPOD (Leo)
+                    </option>
+                  </select>
+                </div>
                 <!-- Car select end -->
 
                 <!-- Pick-up location start -->
@@ -466,26 +472,25 @@
             <h3>Rates <small>per day</small></h3>
             <table class="table">
               <thead>
-              <tr>
-              <th></th>
-              <th>Weekday</th>
-              <th>Weekend & public holidays</th>
-              </tr>
+                <tr>
+                  <th></th>
+                  <th>Weekday</th>
+                  <th>Weekend & public holidays</th>
+                </tr>
               </thead>
               <tbody>
                 <tr>
                   <td><b>3 days and more</b></td>
                   <td>$99</td>
                   <td>$149</td>
-                  </tr>
-              <tr>
-              <td><b>less than 3 days</b></td>
-              <td>$119</td>
-              <td>$199</td>
-              </tr>
-
+                </tr>
+                <tr>
+                  <td><b>less than 3 days</b></td>
+                  <td>$119</td>
+                  <td>$199</td>
+                </tr>
               </tbody>
-              </table>
+            </table>
             <div class="vehicle-img">
               <img
                 class="img-responsive"
@@ -501,11 +506,9 @@
           </div>
           <div class="col-md-3 wow fadeInUp" data-wow-offset="200">
             <a href="#teaser" class="reserve-button scroll-to"
-            ><span class="glyphicon glyphicon-calendar"></span> Reserve now</a
-          >
-            <div class="vehicle-price">
-              Features & Specs
-            </div>
+              ><span class="glyphicon glyphicon-calendar"></span> Reserve now</a
+            >
+            <div class="vehicle-price">Features & Specs</div>
             <table class="table vehicle-features">
               <tr>
                 <td>Built in 200w solar panel and portable solar point</td>
@@ -574,7 +577,6 @@
                 <td>Under bed and tunnel boot</td>
               </tr>
             </table>
-
           </div>
         </div>
         <!-- Vehicle 1 data end -->
@@ -584,26 +586,25 @@
             <h3>Rates <small>per day</small></h3>
             <table class="table">
               <thead>
-              <tr>
-              <th></th>
-              <th>Weekday</th>
-              <th>Weekend & public holidays</th>
-              </tr>
+                <tr>
+                  <th></th>
+                  <th>Weekday</th>
+                  <th>Weekend & public holidays</th>
+                </tr>
               </thead>
               <tbody>
                 <tr>
                   <td><b>3 days and more</b></td>
                   <td>$109</td>
                   <td>$159</td>
-                  </tr>
-              <tr>
-              <td><b>less than 3 days</b></td>
-              <td>$129</td>
-              <td>$209</td>
-              </tr>
-
+                </tr>
+                <tr>
+                  <td><b>less than 3 days</b></td>
+                  <td>$129</td>
+                  <td>$209</td>
+                </tr>
               </tbody>
-              </table>
+            </table>
             <div class="vehicle-img">
               <img
                 class="img-responsive"
@@ -619,46 +620,107 @@
           </div>
           <div class="col-md-3" data-wow-offset="200">
             <a href="#teaser" class="reserve-button scroll-to"
-            ><span class="glyphicon glyphicon-calendar"></span> Reserve now</a
-          >
-            <div class="vehicle-price">
-              Features & Specs
-            </div>
+              ><span class="glyphicon glyphicon-calendar"></span> Reserve now</a
+            >
+            <div class="vehicle-price">Features & Specs</div>
             <table class="table vehicle-features">
-              <tr><td>TARE 850kgs</td></tr>
-              <tr><td>ATM 1600KGS</td></tr>
-              <tr><td>Semi off road</td></tr>
-              <tr><td>Front tunnel boot</td></tr>
-              <tr><td>3 external lights</td></tr>
-              <tr><td>12v and 240v power outlet outside</td></tr>
-              <tr><td>90ltr water tank</td></tr>
-              <tr><td>Roof hatch</td></tr>
-              <tr><td>Overhead cupboards either side</td></tr>
-              <tr><td>Electrical cupboard</td></tr>
-              <tr><td>Aspero bmpro charger with display</td></tr>
-              <tr><td>Built in 200w solar panel and portable solar point</td></tr>
-              <tr><td>Carpet walls</td></tr>
-              <tr><td>Pull down flyscreen rear door</td></tr>
-              <tr><td>Queen size bed and mattress</td></tr>
-              <tr><td>200kg rated Roof rack, for extra sleep area(roof tent)</td></tr>
-              <tr><td>Front tap</td></tr>
-              <tr><td>Water pump</td></tr>
-              <tr><td>Portable waterproof stereo system</td></tr>
-              <tr><td>Built in tv wall mount</td></tr>
-              <tr><td>Under bed and tunnel boot</td></tr>
-              <tr><td>Tv 23 inch power science</td></tr>
-              <tr><td>Bluetooth furoin stereo and charging dock</td></tr>
-              <tr><td>Roof racks custom made</td></tr>
-              <tr><td>Dometic fridge crx 80</td></tr>
-              <tr><td>Nce microwave 3</td></tr>
-              <tr><td>1000w Enerdrive Inverter</td></tr>
-              <tr><td>100ah Lithium batteries</td></tr>
-              <tr><td>Rhino-Racks Rollers Bars</td></tr>
-              <tr><td>Dometic Slide out kitchen</td></tr>
-              <tr><td>Shower awning</td></tr>
-              <tr><td>Ensuite awning</td></tr>
+              <tr>
+                <td>TARE 850kgs</td>
+              </tr>
+              <tr>
+                <td>ATM 1600KGS</td>
+              </tr>
+              <tr>
+                <td>Semi off road</td>
+              </tr>
+              <tr>
+                <td>Front tunnel boot</td>
+              </tr>
+              <tr>
+                <td>3 external lights</td>
+              </tr>
+              <tr>
+                <td>12v and 240v power outlet outside</td>
+              </tr>
+              <tr>
+                <td>90ltr water tank</td>
+              </tr>
+              <tr>
+                <td>Roof hatch</td>
+              </tr>
+              <tr>
+                <td>Overhead cupboards either side</td>
+              </tr>
+              <tr>
+                <td>Electrical cupboard</td>
+              </tr>
+              <tr>
+                <td>Aspero bmpro charger with display</td>
+              </tr>
+              <tr>
+                <td>Built in 200w solar panel and portable solar point</td>
+              </tr>
+              <tr>
+                <td>Carpet walls</td>
+              </tr>
+              <tr>
+                <td>Pull down flyscreen rear door</td>
+              </tr>
+              <tr>
+                <td>Queen size bed and mattress</td>
+              </tr>
+              <tr>
+                <td>200kg rated Roof rack, for extra sleep area(roof tent)</td>
+              </tr>
+              <tr>
+                <td>Front tap</td>
+              </tr>
+              <tr>
+                <td>Water pump</td>
+              </tr>
+              <tr>
+                <td>Portable waterproof stereo system</td>
+              </tr>
+              <tr>
+                <td>Built in tv wall mount</td>
+              </tr>
+              <tr>
+                <td>Under bed and tunnel boot</td>
+              </tr>
+              <tr>
+                <td>Tv 23 inch power science</td>
+              </tr>
+              <tr>
+                <td>Bluetooth furoin stereo and charging dock</td>
+              </tr>
+              <tr>
+                <td>Roof racks custom made</td>
+              </tr>
+              <tr>
+                <td>Dometic fridge crx 80</td>
+              </tr>
+              <tr>
+                <td>Nce microwave 3</td>
+              </tr>
+              <tr>
+                <td>1000w Enerdrive Inverter</td>
+              </tr>
+              <tr>
+                <td>100ah Lithium batteries</td>
+              </tr>
+              <tr>
+                <td>Rhino-Racks Rollers Bars</td>
+              </tr>
+              <tr>
+                <td>Dometic Slide out kitchen</td>
+              </tr>
+              <tr>
+                <td>Shower awning</td>
+              </tr>
+              <tr>
+                <td>Ensuite awning</td>
+              </tr>
             </table>
-
           </div>
         </div>
         <!-- Vehicle 2 data end -->
