--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
               <div class="carousel-inner">
                 <div class="item active">
                   <h1 class="title">
-                    Weekday from $99 per day
+                    Weekday from $109 per day
                     <span class="subtitle">Unlimited kilometers</span>
                   </h1>
                   <div class="car-img">
@@ -196,7 +196,7 @@
                   </div>
                 </div>
                 <div class="item">
-                  <h1 class="title">Weekend from $150 per day</h1>
+                  <h1 class="title">Weekend from $159 per day</h1>
                   <span class="subtitle">Same rate for public holidays</span>
 
                   <div class="car-img">
@@ -481,13 +481,13 @@
               <tbody>
                 <tr>
                   <td><b>3 days and more</b></td>
-                  <td>$99</td>
+                  <td>$109</td>
                   <td>$149</td>
                 </tr>
                 <tr>
                   <td><b>less than 3 days</b></td>
-                  <td>$119</td>
-                  <td>$199</td>
+                  <td>$129</td>
+                  <td>$1109</td>
                 </tr>
               </tbody>
             </table>
@@ -596,12 +596,12 @@
                 <tr>
                   <td><b>3 days and more</b></td>
                   <td>$109</td>
-                  <td>$159</td>
+                  <td>$169</td>
                 </tr>
                 <tr>
                   <td><b>less than 3 days</b></td>
-                  <td>$129</td>
-                  <td>$209</td>
+                  <td>$139</td>
+                  <td>$219</td>
                 </tr>
               </tbody>
             </table>
@@ -1100,7 +1100,31 @@
                 <div class="clearfix"></div>
               </div>
               <!-- Checkout Rental Info end -->
-
+              <div class="fee-section col-xs-12">
+                <h4>Please refer the below rates for your booking:</h4>
+                <table class="table">
+                  <thead>
+                    <tr>
+                      <th></th>
+                      <th>Weekday</th>
+                      <th>Weekend & public holidays</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td><b>3 days and more</b></td>
+                      <td>$109</td>
+                      <td>$149</td>
+                    </tr>
+                    <tr>
+                      <td><b>less than 3 days</b></td>
+                      <td>$129</td>
+                      <td>$1109</td>
+                    </tr>
+                  </tbody>
+                </table>
+                <p>$50 service fee per booking</p>
+              </div>
               <hr />
 
               <!-- Checkout Personal Info start -->
