--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
                 <tr>
                   <td><b>less than 3 days</b></td>
                   <td>$129</td>
-                  <td>$1109</td>
+                  <td>$209</td>
                 </tr>
               </tbody>
             </table>
@@ -1243,7 +1243,9 @@
       new WOW({ mobile: false }).init();
     </script>
     <!--<![endif]-->
-
+<!-- CDN example (jsDelivr) -->
+<script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
+<script>dayjs().format()</script>
     <script src="js/custom.js"></script>
   </body>
 </html>
