--- a/index.html
+++ b/index.html
@@ -259,6 +259,9 @@
                     <option value="assets/img/OURGEN-RV_GENPOD_Front.png">
                       GENPOD (Ella)
                     </option>
+                    <option value="assets/img/OURGEN-RV_GENPOD_Front.png">
+                      GENPOD (Upgrade Ella)
+                    </option>
                     <option
                       value="img/OURGEN-RV_GENPOD_Right-removebg-preview.png"
                     >
@@ -462,9 +465,13 @@
                 <a href="#vehicle-1">GENPOD (Ella)</a
                 ><span class="active">&nbsp;</span>
               </li>
+              <li class="active">
+                <a href="#vehicle-2">GENPOD (Upgrade Ella)</a
+                ><span>&nbsp;</span>
+              </li>
               <li>
-                <a href="#vehicle-2">GENPOD (Leo)</a
-                ><span class="active">&nbsp;</span>
+                <a href="#vehicle-3">GENPOD (Leo)</a
+                ><span>&nbsp;</span>
               </li>
             </ul>
           </div>
@@ -589,8 +596,122 @@
           </div>
         </div>
         <!-- Vehicle 1 data end -->
-        <!-- Vehicle 2 data start -->
-        <div class="vehicle-data" id="vehicle-2">
+                <!-- Vehicle 2 data start -->
+                <div class="vehicle-data" id="vehicle-2">
+                  <div class="col-md-6 wow fadeIn" data-wow-offset="100">
+                    <h3>Rates <small>per day</small></h3>
+                    <table class="table">
+                      <thead>
+                        <tr>
+                          <th></th>
+                          <th>Weekday</th>
+                          <th>Weekend & public holidays</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <td><b>3 days and more</b></td>
+                          <td>$129</td>
+                          <td>$179</td>
+                        </tr>
+                        <tr>
+                          <td><b>less than 3 days</b></td>
+                          <td>$149</td>
+                          <td>$199</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                    <div class="vehicle-img">
+                      <img
+                        class="img-responsive"
+                        src="assets/img/OURGEN-RV_GENPOD_Front.png"
+                        alt="Vehicle"
+                      />
+                      <img
+                        class="img-responsive"
+                        src="assets/img/pod-inside.webp"
+                        alt="Vehicle"
+                      />
+                    </div>
+                  </div>
+                  <div class="col-md-3 wow fadeInUp" data-wow-offset="200">
+                    <a href="#teaser" class="reserve-button scroll-to"
+                      ><span class="glyphicon glyphicon-calendar"></span> Reserve now</a
+                    >
+                    <div class="vehicle-price">Features & Specs</div>
+                    <table class="table vehicle-features">
+                      <tr>
+                        <td>Built in 200w solar panel and portable solar point</td>
+                      </tr>
+                      <tr>
+                        <td>TARE 850kgs</td>
+                      </tr>
+                      <tr>
+                        <td>ATM 1600KGS</td>
+                      </tr>
+                      <tr>
+                        <td>Semi off road</td>
+                      </tr>
+                      <tr>
+                        <td>Front tunnel boot</td>
+                      </tr>
+                      <tr>
+                        <td>3 external lights</td>
+                      </tr>
+                      <tr>
+                        <td>12v and 240v power outlet outside</td>
+                      </tr>
+                      <tr>
+                        <td>90ltr water tank</td>
+                      </tr>
+                      <tr>
+                        <td>Roof hatch</td>
+                      </tr>
+                      <tr>
+                        <td>Overhead cupboards either side</td>
+                      </tr>
+                      <tr>
+                        <td>Electrical cupboard</td>
+                      </tr>
+                      <tr>
+                        <td>Aspero bmpro charger with display</td>
+                      </tr>
+                      <tr>
+                        <td>Built in 200w solar panel and portable solar point</td>
+                      </tr>
+                      <tr>
+                        <td>Carpet walls</td>
+                      </tr>
+                      <tr>
+                        <td>Pull down flyscreen rear door</td>
+                      </tr>
+                      <tr>
+                        <td>Queen size bed and mattress</td>
+                      </tr>
+                      <tr>
+                        <td>200kg rated Roof rack, for extra sleep area(roof tent)</td>
+                      </tr>
+                      <tr>
+                        <td>Front tap</td>
+                      </tr>
+                      <tr>
+                        <td>Water pump</td>
+                      </tr>
+                      <tr>
+                        <td>Portable waterproof stereo system</td>
+                      </tr>
+                      <tr>
+                        <td>Built in tv wall mount</td>
+                      </tr>
+                      <tr>
+                        <td>Under bed and tunnel boot</td>
+                      </tr>
+                    </table>
+                  </div>
+                </div>
+                <!-- Vehicle 2 data end -->
+        <!-- Vehicle 3 data start -->
+        <div class="vehicle-data" id="vehicle-3">
           <div class="col-md-6" data-wow-offset="200">
             <h3>Rates <small>per day</small></h3>
             <table class="table">
@@ -604,13 +725,13 @@
               <tbody>
                 <tr>
                   <td><b>3 days and more</b></td>
-                  <td>$119</td>
-                  <td>$169</td>
+                  <td>$159</td>
+                  <td>$209</td>
                 </tr>
                 <tr>
                   <td><b>less than 3 days</b></td>
-                  <td>$139</td>
-                  <td>$219</td>
+                  <td>$179</td>
+                  <td>$229</td>
                 </tr>
               </tbody>
             </table>
