Add price calculator

--- a/index.html
+++ b/index.html
@@ -1094,7 +1094,28 @@
                   </tr>
                 </tbody>
               </table> -->
-              <p>$50 service fee per booking</p>
+              <!-- conver the below to a table -->
+              
+              
+              <!-- <h4>Booking fee: $50</h4>
+              <h4>Rental fee: $<span id="rental-fee"></span></h4>
+              <h4>Total amount: $<span id="total-price"></span></h4> -->
+              <table class="table">
+                <tr>
+                  <td><b>Booking fee:</b></td>
+                  <td>$50</td>
+                </tr>
+                <tr>
+                  <td><b>Rental fee:</b></td>
+                  <td>$<span id="rental-fee"></span></td>
+                </tr>
+                <tr>
+                  <td><b>Total amount:</b></td>
+                  <td>$<span id="total-price"></span></td>
+                </tr>
+              </table>
+              <input type="hidden" name="_rentalFee" id="_rentalFee" value="" />
+              <input type="hidden" name="_totalAmount" id="_totalAmount" value="" />
             </div>
             <hr />
 
