--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
         <div class="clearfix"></div>
 
         <!-- start navigation -->
+        <!-- new nav bar -->
         <nav class="navbar navbar-default" role="navigation">
           <div class="container-fluid">
             <!-- Toggle get grouped for better mobile display -->
